--- a/src/flmmlmonitor.mxml
+++ b/src/flmmlmonitor.mxml
@@ -36,6 +36,12 @@
 				import net.vt6f3ohw.flmon.Util;
 				
 				protected var m_timer:Timer;
+				
+				
+				// TODO: コンフィグを可能にする
+				// 　　・「再生ボタンを押した時の巻き戻し」をON/OFFできるようにする
+				// 　　・「オートスクロールモード」を「常時スクロール」「ページ単位スクロール」のどちらか好きな方に設定できるようにする
+				
 			  
 				// 定数たち
 				
@@ -44,6 +50,14 @@
 					private var _frameCounterText_ref:TextField;
 					private var _soundChannelPositionText_ref:TextField;
 				private var _mask_PRoll_ref:Sprite; // マスク
+				
+				// UI操作用変数たち
+				/** 現在のフレームの_positionXInPixel */
+				private var _positionXInPixel:Number;
+				/** 1フレーム前の _positionXInPixel */
+				private var _positionXInPixel_prev:Number; 
+				/** オートスクロールの際の毎フレームでのスクロール量を格納するキュー */
+				private var _absoluteScrollQueue:Array = new Array();
 				
 				// カウンタたち
 				private var frameCounter:uint = 0;
@@ -84,7 +98,7 @@
 				private var _isKeyPressed:Object = new Object(); // _isKeyPressed[Keyboard.XX] にキーの押下状態を保持
 
 				public function init():void {
-					var i:int; // for用
+					var i:Number; // for用
 					  
 					if (this.parameters["mml"] != undefined) // mmlパラメータが渡されていたらMML入力欄にそれを置いておく
 						input.text = unescape(this.parameters["mml"]);
@@ -104,13 +118,13 @@
 							;
 						}
 						{ // ピアノロール部分のUIの準備
-							/** [ユーティリティ関数] ピアノロールを (deltaX, deltaY) だけスクロールする*/
-							var scroll:Function = function(deltaX:int, deltaY:int):void { // 共通する処理をまとめた関数
+							/** [ユーティリティ関数] ピアノロールを (x, y) にスクロールする*/
+							var absoluteScroll:Function = function(x:int, y:int):void {
 								var rect:Rectangle;
 								{
 									rect = _rootSp_PRoll_ref.scrollRect.clone();
-									rect.x += deltaX;
-									rect.y += deltaY;
+									rect.x = x;
+									rect.y = y;
 									if (rect.x < 0) rect.x = 0; // 画面左端以降にスクロールしようとしていたらクリッピング
 									if (rect.y < 0) rect.y = 0; // 画面上端以降にスクロールしようとしていたらクリッピング
 									if (rect.x + rect.width > (PianoRoll.BEAT_WIDTH*4)*100) rect.x = (PianoRoll.BEAT_WIDTH*4)*100 - rect.width; // 画面右端以降にスクロールしようとしていたらクリッピング
@@ -118,6 +132,10 @@
 								}
 								
 								_rootSp_PRoll_ref.scrollRect = rect;
+							};
+							/** [ユーティリティ関数] ピアノロールを (deltaX, deltaY) だけスクロールする*/
+							var relativeScroll:Function = function(deltaX:int, deltaY:int):void {
+								absoluteScroll(_rootSp_PRoll_ref.scrollRect.x + deltaX, _rootSp_PRoll_ref.scrollRect.y + deltaY);
 							};
 							
 							{ // 描画が mx:Image 外にはみ出さないように、mx:Image にマスクを設定
@@ -145,6 +163,12 @@
 											frameCounterText = new TextField();
 											frameCounterText.x = 20;
 											frameCounterText.y = 20;
+											frameCounterText.width = 400;
+											frameCounterText.height = 60;
+											
+											// デバッグ時は true にする
+											//frameCounterText.visible = true;
+											frameCounterText.visible = false;
 										}
 										_frameCounterText_ref = frameCounterText; // 参照のプール
 										
@@ -156,6 +180,12 @@
 											soundChannelPositionText = new TextField();
 											soundChannelPositionText.x = 20;
 											soundChannelPositionText.y = 60;
+											soundChannelPositionText.width = 400;
+											soundChannelPositionText.height = 60;
+											
+											// デバッグ時は true にする
+											//soundChannelPositionText.visible = true;
+											soundChannelPositionText.visible = false;
 										}
 										_soundChannelPositionText_ref = soundChannelPositionText; // 参照のプール
 										
@@ -163,7 +193,7 @@
 									}
 									rootSp_PRoll.addEventListener(Event.ENTER_FRAME, function(e:Event):void { // デバッグ用。フレームカウンタを表示
 										{ // フレームカウント文字列を更新
-											_frameCounterText_ref.text = (++frameCounter).toString();
+											_frameCounterText_ref.text = "frame count: " + (++frameCounter).toString();
 										}
 										{ // 再生位置文字列を更新
 											if (_sequencer_ref != null) {
@@ -171,42 +201,77 @@
 												
 												// ここ、ちゃんと毎回 _sequencer_ref.getSoundChannel() しないと
 												// 「position がずっと変化しない SoundChannel インスタンス」に遭遇するので注意（原因不明）
-												_soundChannelPositionText_ref.text = _sequencer_ref.getSoundChannel().position.toString();
+												_soundChannelPositionText_ref.text = "sound channel position: " + _sequencer_ref.getSoundChannel().position.toString();
 											}
 										}
 										{ // ピアノロールのスクロール位置を更新											
 											{
 												var isScrolled:Boolean = false; // scrollRect が変化したかどうかを格納するBoolean
 												
-												// 各キーが押下状態にあったらスクロール
-												if (_isKeyPressed[Keyboard.UP] != undefined && _isKeyPressed[Keyboard.UP]) { scroll(0, -20); isScrolled = true; }
-												if (_isKeyPressed[Keyboard.DOWN] != undefined && _isKeyPressed[Keyboard.DOWN]) { scroll(0, 20); isScrolled = true; }
-												if (_isKeyPressed[Keyboard.LEFT] != undefined && _isKeyPressed[Keyboard.LEFT]) { scroll(-20, 0); isScrolled = true; }
-												if (_isKeyPressed[Keyboard.RIGHT] != undefined && _isKeyPressed[Keyboard.RIGHT]) { scroll(20, 0); isScrolled = true; }
+												// 各キーが押下状態にあったらスクロール。また、オートスクロール中に左右キーが押された場合はオートスクロールを中断
+												if (_isKeyPressed[Keyboard.UP] != undefined && _isKeyPressed[Keyboard.UP]) { relativeScroll(0, -20); isScrolled = true; }
+												if (_isKeyPressed[Keyboard.DOWN] != undefined && _isKeyPressed[Keyboard.DOWN]) { relativeScroll(0, 20); isScrolled = true; }
+												if (_isKeyPressed[Keyboard.LEFT] != undefined && _isKeyPressed[Keyboard.LEFT]) { relativeScroll( -20, 0); isScrolled = true; _absoluteScrollQueue.length = 0; }
+												if (_isKeyPressed[Keyboard.RIGHT] != undefined && _isKeyPressed[Keyboard.RIGHT]) { relativeScroll(20, 0); isScrolled = true; _absoluteScrollQueue.length = 0; }
 												
 												// scrollRect が変化していたら Event.SCROLL イベントを dispatch
 												if(isScrolled){ rootSp_PRoll.dispatchEvent(new Event(Event.SCROLL)); }
 											}
 										}
-										{ // 再生位置バーを更新
+										{ // 再生位置バーを更新＋再生位置バーに応じてオートスクロールをキュー
 											rootSp_PRoll.playingPositionBarLayer_ref.graphics.clear();
 											if (_sequencer_ref != null) { // 一応nullチェック
 												var soundChannel:SoundChannel = _sequencer_ref.getSoundChannel();
 												
-												if (_sequencer_ref.isPlaying() || _sequencer_ref.isPaused()) { // 再生中かポーズ中のときのみ再生位置バーを表示
+												// 再生中かポーズ中のときのみ再生位置バーを表示
+												if (_sequencer_ref.isPlaying() || _sequencer_ref.isPaused()) {
 													if(soundChannel != null){ // 一応nullチェック
-														rootSp_PRoll.playingPositionBarLayer_ref.graphics.lineStyle(4, 0x333333, 0.5);
 														{
-															var positionXInPixel:Number;
 															{
-																positionXInPixel = Number(PianoRoll.BEAT_WIDTH) * (_msToTick(_sequencer_ref.getSoundChannel().position) / 96.0);
+																// TODO: 「1回目はpositionXInPixel_prev に未定義の値が入る」問題に一応対処
+																_positionXInPixel_prev = _positionXInPixel; // _positionXInPixel を更新する前に _positionXInPixel_prev にバックアップ
+																_positionXInPixel = Number(PianoRoll.BEAT_WIDTH) * (_msToTick(_sequencer_ref.getSoundChannel().position) / 96.0);
 															}
 															
-															rootSp_PRoll.playingPositionBarLayer_ref.graphics.moveTo(positionXInPixel, 0);
-															rootSp_PRoll.playingPositionBarLayer_ref.graphics.lineTo(positionXInPixel, PianoRoll.PIANOROLL_HEIGHT);
+															rootSp_PRoll.playingPositionBarLayer_ref.graphics.lineStyle(4, 0x333333, 0.5);
+															rootSp_PRoll.playingPositionBarLayer_ref.graphics.moveTo(_positionXInPixel, 0);
+															rootSp_PRoll.playingPositionBarLayer_ref.graphics.lineTo(_positionXInPixel, PianoRoll.PIANOROLL_HEIGHT);
+															
+															{ // 一定の条件が満たされたときにオートスクロールをキューする
+																// オートスクロール中でないときのみ新たにオートスクロールする
+																if (_absoluteScrollQueue.length == 0) {
+																	var ACTIVATION_WIDTH:Number = PianoRoll.BEAT_WIDTH * 4; // 画面右端から何pixelの所をまたいだらオートスクロールするか
+																	
+																	trace("_positionXInPixel_prev = " + _positionXInPixel_prev + ", _positionXInPixel = " + _positionXInPixel);
+																	// 再生位置バーが画面上のある部分をまたいだらオートスクロール
+																	if (_positionXInPixel_prev < rootSp_PRoll.scrollRect.x + rootSp_PRoll.width - ACTIVATION_WIDTH
+																		&& rootSp_PRoll.scrollRect.x + rootSp_PRoll.width - ACTIVATION_WIDTH < _positionXInPixel) {
+																		trace("stepped over");
+																		
+																		var DURATION_IN_FRAME:Number = 60.0; // 何フレームで動かすか
+																		for (i = 1.0 ; i <= DURATION_IN_FRAME ; i += 1.0) {
+																			var absoluteScrollEntry:Object; // スクロール先の絶対座標を保持するエントリ
+																			{
+																				absoluteScrollEntry = new Object(); // absoluteScrollEntry["scrollTo_x"] のみを要素に持つ連想配列
+																				absoluteScrollEntry["scrollTo_x"] = Util.easeInOut_Quadratic(i, rootSp_PRoll.scrollRect.x, rootSp_PRoll.width - ACTIVATION_WIDTH, DURATION_IN_FRAME);
+																			}
+																			
+																			_absoluteScrollQueue.push(absoluteScrollEntry);
+																		}	
+																	}
+																}
+															}
 														}
 													}
 												}
+											}
+										}
+										{ // オートスクロールを処理
+											if (_absoluteScrollQueue.length > 0) {
+												var absoluteScrollEntry2:Object = _absoluteScrollQueue.shift();
+												
+												absoluteScroll(absoluteScrollEntry2["scrollTo_x"], _rootSp_PRoll_ref.scrollRect.y);
+												rootSp_PRoll.dispatchEvent(new Event(Event.SCROLL)); // Event.SCROLL イベントを dispatch
 											}
 										}
 									});
@@ -254,7 +319,7 @@
 							pianoroll.addEventListener(MouseEvent.MOUSE_WHEEL, function(e3:MouseEvent):void {
 								var delta:int = e3.delta; // ホイールの回転量
 
-								scroll(0, PianoRoll.SEMITONE_HEIGHT * ( -delta )); // (半音の縦幅)*(ホイールの回転量)ずつスクロール（スクロールの向きは指を動かす方向と同じ）
+								relativeScroll(0, PianoRoll.SEMITONE_HEIGHT * ( -delta )); // (半音の縦幅)*(ホイールの回転量)ずつスクロール（スクロールの向きは指を動かす方向と同じ）
 								rootSp_PRoll.dispatchEvent(new Event(Event.SCROLL)); // Event.SCROLL イベントを dispatch
 							});
 							// TODO: キー押下状態中にフォーカスがどっか行ったときに備えて FocusEvent.OUT 時にキー押下状態を全部 false にするコードを追加
@@ -285,7 +350,26 @@
 					var item:PianoRollItem;
 					
 					if (!player.isPlaying()) {
-						if (player.isPaused()) m_timer.start(); // 1秒ごとに再生位置表示を更新するタイマーを起動
+						if (player.isPaused()) {
+							m_timer.start(); // 1秒ごとに再生位置表示を更新するタイマーを起動
+						}else {
+							{ // 新規再生が起きたら強制的にオートスクロールをキューする
+								_absoluteScrollQueue.length　= 0; // オートスクロール中だったらそのオートスクロールを中断する
+								{
+									var DURATION_IN_FRAME:Number = 60.0; // 何フレームで動かすか
+									for (i = 1.0 ; i <= DURATION_IN_FRAME ; i += 1.0) {
+										var absoluteScrollEntry:Object; // スクロール先の絶対座標を保持するエントリ
+										{
+											absoluteScrollEntry = new Object(); // absoluteScrollEntry["scrollTo_x"] のみを要素に持つ連想配列
+											absoluteScrollEntry["scrollTo_x"] = Util.easeInOut_Quadratic(i, _rootSp_PRoll_ref.scrollRect.x, -_rootSp_PRoll_ref.scrollRect.x, DURATION_IN_FRAME);
+										}
+										
+										_absoluteScrollQueue.push(absoluteScrollEntry);
+									}
+								}
+							}
+						}
+						
 						player.play(input.text);
 						playButton.label = "Pause";
 
@@ -363,9 +447,9 @@
 									for (i = 0 ; i < len ; i++ ) { // MEvent インスタンスを順次走査
 										if (i == 0) {
 											tempoBoundaryEntries[0]["ms"] = 0.0; // 特例
-											trace("ms: "+tempoBoundaryEntries[i]["ms"]);
-											trace("tick: "+tempoBoundaryEntries[i]["tick"]);
-											trace("tempo: "+tempoBoundaryEntries[i]["tempo"]);
+											//trace("ms: "+tempoBoundaryEntries[i]["ms"]);
+											//trace("tick: "+tempoBoundaryEntries[i]["tick"]);
+											//trace("tempo: "+tempoBoundaryEntries[i]["tempo"]);
 											continue;
 										}else {
 											// 前のエントリの ms, tick, tempo と現在のエントリの tick を使って、現在のエントリの ms を計算
@@ -375,9 +459,9 @@
 												   / 96.0 /* [tick/beat] */
 												   / tempoBoundaryEntries[i - 1]["tempo"] /* [beat/min] */
 												   * 60000.0 /* [ms/min] */;
-											trace("ms: "+tempoBoundaryEntries[i]["ms"]);
-											trace("tick: "+tempoBoundaryEntries[i]["tick"]);
-											trace("tempo: "+tempoBoundaryEntries[i]["tempo"]);
+											//trace("ms: "+tempoBoundaryEntries[i]["ms"]);
+											//trace("tick: "+tempoBoundaryEntries[i]["tick"]);
+											//trace("tempo: "+tempoBoundaryEntries[i]["tempo"]);
 										}
 									}
 								}
@@ -488,9 +572,9 @@
 	      ]]>
 	</mx:Script>
 
-	<mx:Panel title="FlMML" width="100%" height="100%"
+	<mx:Panel title="FlMMLMonitor" width="100%" height="100%"
 	          paddingTop="4" paddingBottom="4" paddingLeft="4" paddingRight="4">
-	    <mx:VBox label="MML" width="100%" height="100%"
+	    <mx:VBox width="100%" height="100%"
 	                   paddingTop="4" paddingBottom="4" paddingLeft="4" paddingRight="4">
 	      <mx:VDividedBox width="100%" height="100%" backgroundColor="#dddddd">
 	        <mx:TextArea id="input" width="100%" height="2%" fontSize="14" text="L8 O5CDEFGAB&lt;C"></mx:TextArea>
@@ -518,7 +602,7 @@
 										pageSize="{pianoroll.height}"
 										lineScrollSize="20" pageScrollSize="{pianoroll.height}" 
 										repeatDelay="0" repeatInterval="0"
-										scroll="_rootSp_PRoll_ref.scrollRect = new Rectangle(_rootSp_PRoll_ref.scrollRect.x, pianorollVScrollBar.scrollPosition, pianoroll.width, pianoroll.height);" />
+										scroll="_absoluteScrollQueue.length = 0; _rootSp_PRoll_ref.scrollRect = new Rectangle(_rootSp_PRoll_ref.scrollRect.x, pianorollVScrollBar.scrollPosition, pianoroll.width, pianoroll.height);" />
 					</mx:GridItem>
 				</mx:GridRow>
 
@@ -531,7 +615,7 @@
 										pageSize="{pianoroll.width}"
 										lineScrollSize="20" pageScrollSize="{pianoroll.width}" 
 										repeatDelay="0" repeatInterval="0"
-										scroll="_rootSp_PRoll_ref.scrollRect = new Rectangle(pianorollHScrollBar.scrollPosition, _rootSp_PRoll_ref.scrollRect.y, pianoroll.width, pianoroll.height)" />
+										scroll="_absoluteScrollQueue.length = 0; _rootSp_PRoll_ref.scrollRect = new Rectangle(pianorollHScrollBar.scrollPosition, _rootSp_PRoll_ref.scrollRect.y, pianoroll.width, pianoroll.height)" />
 					</mx:GridItem>
 					<mx:GridItem backgroundColor="#0080C0">
 					</mx:GridItem>
